--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                             <a href="#testimonial">TESTIMONIAL</a>
                             <a href="#" class="btn wa-btn"><i class="fab fa-whatsapp"></i> Kontak Kami</a>
                         </div>
+
+                        <div class="burger">
+                            <i class="fa fa-bars"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -43,7 +47,10 @@
             <div class="owl-carousel hero">
                 <div class="item">
                     <figure>
-                        <img src="asset/images/bank/hero-1.jpg" alt="">
+                        <!--BANNER DESKTOP-->
+                        <img class="for-desktop" src="asset/images/bank/hero-1.jpg" alt="">
+                        <!--BANNER MOBILE-->
+                        <img class="for-mobile" src="asset/images/bank/hero-1-mobile.jpg" alt="">
                     </figure>
                     <div class="container">
                         <div class="row align-items-center">
@@ -63,7 +70,10 @@
                 </div>
                 <div class="item">
                     <figure>
-                        <img src="asset/images/bank/hero-1.jpg" alt="">
+                        <!--BANNER DESKTOP-->
+                        <img class="for-desktop" src="asset/images/bank/hero-1.jpg" alt="">
+                        <!--BANNER MOBILE-->
+                        <img class="for-mobile" src="asset/images/bank/hero-1-mobile.jpg" alt="">
                     </figure>
                     <div class="container">
                         <div class="row align-items-center">
@@ -83,7 +93,10 @@
                 </div>
                 <div class="item">
                     <figure>
-                        <img src="asset/images/bank/hero-1.jpg" alt="">
+                        <!--BANNER DESKTOP-->
+                        <img class="for-desktop" src="asset/images/bank/hero-1.jpg" alt="">
+                        <!--BANNER MOBILE-->
+                        <img class="for-mobile" src="asset/images/bank/hero-1-mobile.jpg" alt="">
                     </figure>
                     <div class="container">
                         <div class="row align-items-center">
@@ -114,7 +127,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="product-card" data-aos="flip-up">
                             <figure class="ratio ratio-135">
                                 <a href="#"><img src="asset/images/bank/img-1.jpg" alt=""></a>
@@ -127,7 +140,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="product-card" data-aos="flip-up" data-aos-delay="100">
                             <figure class="ratio ratio-135">
                                 <a href="#"><img src="asset/images/bank/img-2.jpg" alt=""></a>
@@ -140,7 +153,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="product-card" data-aos="flip-up" data-aos-delay="200">
                             <figure class="ratio ratio-135">
                                 <a href="#"><img src="asset/images/bank/img-3.jpg" alt=""></a>
@@ -153,7 +166,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="product-card" data-aos="flip-up" data-aos-delay="300">
                             <figure class="ratio ratio-135">
                                 <a href="#"><img src="asset/images/bank/img-4.jpg" alt=""></a>
@@ -166,7 +179,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="product-card" data-aos="flip-up" data-aos-delay="300">
                             <figure class="ratio ratio-135">
                                 <a href="#"><img src="asset/images/bank/img-5.jpg" alt=""></a>
@@ -179,7 +192,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="product-card" data-aos="flip-up" data-aos-delay="200">
                             <figure class="ratio ratio-135">
                                 <a href="#"><img src="asset/images/bank/img-6.jpg" alt=""></a>
@@ -192,7 +205,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="product-card" data-aos="flip-up" data-aos-delay="100">
                             <figure class="ratio ratio-135">
                                 <a href="#"><img src="asset/images/bank/img-7.jpg" alt=""></a>
@@ -205,7 +218,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="product-card" data-aos="flip-up">
                             <figure class="ratio ratio-135">
                                 <a href="#"><img src="asset/images/bank/img-8.jpg" alt=""></a>
@@ -232,7 +245,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="fitur-card" data-aos="flip-left">
                             <figure class="ratio ratio-135">
                                 <img src="asset/images/bank/f1.jpg" alt="">
@@ -240,7 +253,7 @@
                             <h4>Jahitan Rapi</h4>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="fitur-card" data-aos="flip-left" data-aos-delay="100">
                             <figure class="ratio ratio-135">
                                 <img src="asset/images/bank/f2.jpg" alt="">
@@ -248,7 +261,7 @@
                             <h4>Bahan Berkualitas</h4>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="fitur-card" data-aos="flip-left" data-aos-delay="200">
                             <figure class="ratio ratio-135">
                                 <img src="asset/images/bank/f3.jpg" alt="">
@@ -256,7 +269,7 @@
                             <h4>Mudah Dibersihkan</h4>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="fitur-card" data-aos="flip-left" data-aos-delay="300">
                             <figure class="ratio ratio-135">
                                 <img src="asset/images/bank/f4.jpg" alt="">
@@ -350,7 +363,7 @@
                             <a href="#"><i class="fab fa-whatsapp"></i></a>
                             <a href="#"><i class="fa fa-envelope"></i></a>
                         </div>
-                        <p class="pl-0 mt-5">Copyright &copy; Evojeans. All rights reserved</p>
+                        
                     </div>
                     <div class="col-md-4">
                         <h5>Hubungi Kami</h5>
@@ -361,6 +374,11 @@
                         </p>
                         <p><i class="fa fa-phone"></i> (+6221) 5460011, (+6221) 55 777 000</p>
                         <p><i class="fa fa-envelope"></i> telemarketing@multipolar.com</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p class="pl-0 mt-5">Copyright &copy; Evojeans. All rights reserved</p>
                     </div>
                 </div>
             </div>
