--- a/index.html
+++ b/index.html
@@ -384,6 +384,8 @@
             </div>
         </footer>
 
+        <a href="#" class="wa-button"><i class="fab fa-whatsapp"></i></a>
+
     </div>
 
     <script src="asset/js/jquery-1.11.0.min.js"></script>
